Add Rijksmuseum example to notebook

--- a/examples/example_artscraper.ipynb
+++ b/examples/example_artscraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "801ffc7d",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "#!pip install https://github.com/sodascience/artscraper.git\n",
     "from pathlib import Path\n",
     "\n",
-    "from artscraper import GoogleArtScraper, WikiArtScraper\n",
+    "from artscraper import GoogleArtScraper, WikiArtScraper, PhiladelphiaMuseumScraper, RijksmuseumScraper\n",
     "\n",
     "# to show the images\n",
     "from matplotlib import pyplot as plt\n",
@@ -171,7 +171,7 @@
    "source": [
     "art_url = \"https://philamuseum.org/collection/object/326615\"\n",
     "\n",
-    "scraper = PhiladelphiaMuseumScraper() \n",
+    "scraper = RijksmuseumScraper() \n",
     "scraper.load_link(art_url)\n",
     "metadata = scraper.get_metadata()\n",
     "scraper.save_image(\"data/philamuseum_example.png\")\n",
@@ -179,6 +179,38 @@
     "\n",
     "# display the image\n",
     "img = mpimg.imread(\"data/philamuseum_example.png\")\n",
+    "plt.imshow(img)\n",
+    "plt.show()\n",
+    "\n",
+    "# make sure to close the scraper\n",
+    "scraper.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a87cb5f0",
+   "metadata": {},
+   "source": [
+    "## 1.4 Rijksmuseum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2c7750e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "art_url = \"https://www.rijksmuseum.nl/en/collection/RP-P-2009-2575\"\n",
+    "\n",
+    "scraper = RijksmuseumScraper() \n",
+    "scraper.load_link(art_url)\n",
+    "metadata = scraper.get_metadata()\n",
+    "scraper.save_image(\"data/rijksmuseum_example.png\")\n",
+    "print(metadata)\n",
+    "\n",
+    "# display the image\n",
+    "img = mpimg.imread(\"data/rijksmuseum_example.png\")\n",
     "plt.imshow(img)\n",
     "plt.show()\n",
     "\n",
