moved wait function to base.py, added met and smithsonian scrapers, updated example notebook

--- a/examples/example_artscraper.ipynb
+++ b/examples/example_artscraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "801ffc7d",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "#!pip install https://github.com/sodascience/artscraper.git\n",
     "from pathlib import Path\n",
     "\n",
-    "from artscraper import GoogleArtScraper, WikiArtScraper, PhiladelphiaMuseumScraper, RijksmuseumScraper\n",
+    "from artscraper import GoogleArtScraper, WikiArtScraper, PhiladelphiaMuseumScraper, RijksmuseumScraper, SmithsonianScraper, MetMuseumScraper\n",
     "\n",
     "# to show the images\n",
     "from matplotlib import pyplot as plt\n",
@@ -148,7 +148,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "344cc003",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -211,6 +213,70 @@
     "\n",
     "# display the image\n",
     "img = mpimg.imread(\"data/rijksmuseum_example.png\")\n",
+    "plt.imshow(img)\n",
+    "plt.show()\n",
+    "\n",
+    "# make sure to close the scraper\n",
+    "scraper.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e4a2f74",
+   "metadata": {},
+   "source": [
+    "## 1.5 Smithsonian Institute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "827c1f23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "art_url = \"https://www.si.edu/object/frida-kahlo-de-rivera:nmah_1191413\"\n",
+    "\n",
+    "scraper = SmithsonianScraper() \n",
+    "scraper.load_link(art_url)\n",
+    "metadata = scraper.get_metadata()\n",
+    "scraper.save_image(\"data/smithsonian_example.jpg\")\n",
+    "print(metadata)\n",
+    "\n",
+    "# display the image\n",
+    "img = mpimg.imread(\"data/smithsonian_example.jpg\")\n",
+    "plt.imshow(img)\n",
+    "plt.show()\n",
+    "\n",
+    "# make sure to close the scraper\n",
+    "scraper.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c82082ab",
+   "metadata": {},
+   "source": [
+    "## 1.6 Met Museum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1353510c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "art_url = \"https://www.metmuseum.org/art/collection/search/436535\"\n",
+    "\n",
+    "scraper = MetMuseumScraper() \n",
+    "scraper.load_link(art_url)\n",
+    "metadata = scraper.get_metadata()\n",
+    "scraper.save_image(\"data/metmuseum_example.jpg\")\n",
+    "print(metadata)\n",
+    "\n",
+    "# display the image\n",
+    "img = mpimg.imread(\"data/metmuseum_example.jpg\")\n",
     "plt.imshow(img)\n",
     "plt.show()\n",
     "\n",
@@ -303,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
